src/modules/base/carousel/carousel.css
.avonni-carousel__panel {
    display: flex;
    flex: 0 0 100%;
    max-width: 100%;
}

.avonni-carousel__content {
    height: 12rem;
}

.avonni-carousel__nav-button {
    display: block;
}

.avonni-carousel__autoscroll-button-with-indicator {
    position: absolute;
    bottom: 10px;
    left: var(--lwc-spacingMedium, 1rem);
}

.avonni-carousel__autoscroll-button-without-indicator {
    position: relative;
    bottom: 10px;
    left: var(--lwc-spacingMedium, 1rem);
}

.avonni-carousel-progress-indicator-shaded-active {
    background-color: #dddbda;
    border: #dddbda;
}

.avonni-carousel-progress-indicator-shaded-active:hover,
.avonni-carousel-progress-indicator-shaded-active:focus {
    background-color: #dddbda;
    border: #dddbda;
}

.avonni-carousel-progress-indicator-shaded-inactive:focus {
    background-color: #dddbda;
    border: #dddbda;
}

